<resources>
    <string name="app_name">FirebaseChatApp</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Hello!</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Login</string>
    <string name="enter_name">Enter User name</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="label_messenger">Messenger</string>
    <string name="label_profile">Profile</string>
    <string name="btn_save">Save</string>
    <string name="type_message">Type Message</string>
    <string name="already_account">Already have an account?</string>
    <string name="search">Search</string>


</resources>