<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:gravity="start"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="45dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:id="@+id/entName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:hint="@string/enter_email"
        android:id="@+id/entEmail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/enter_password"
        android:id="@+id/entPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/enter_confirm_password"
        android:id="@+id/entConfirmPassword"/>


    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_btn"
        android:padding="13dp"
        android:text="@string/btn_sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing=".1"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/border_top"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="14sp"
            />
        <TextView
            android:id="@id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primary"/>

    </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="10dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/btn_sign_in"-->
<!--            android:layout_marginLeft="5dp"-->
<!--            android:padding="15dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:backgroundTint="@color/primary"-->
<!--            />-->

    
</LinearLayout>